--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 dist/
+dist.zip
 
 # Dependency directories
 node_modules/
